feat: Update service worker and Vercel config
Updates the service worker cache name to v2 and implements a "network first" caching strategy. Also, adds rewrites in `vercel.json` to correctly serve `sw.js` and `manifest.json`, and modifies `vite.config.ts` to avoid conflicts and ensure proper handling of root-level assets.

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
   "trailingSlash": false,
   "rewrites": [
     {
+      "source": "/sw.js",
+      "destination": "/sw.js"
+    },
+    {
+      "source": "/manifest.json",
+      "destination": "/manifest.json"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
