feat: Configure Vite for Vercel deployment
Updates `vite.config.ts` to correctly handle public assets like `manifest.json` and `sw.js` by setting `publicDir: '.'`. Also adjusts `rollupOptions` to exclude these files from the JS bundle.

Updates `vercel.json` to align with Vite's expected configuration, including `framework: 'vite'` and a simplified `rewrites` structure.

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,11 @@
 
 {
+  "version": 2,
   "cleanUrls": true,
-  "trailingSlash": false,
+  "framework": "vite",
   "rewrites": [
-    {
-      "source": "/sw.js",
-      "destination": "/sw.js"
-    },
-    {
-      "source": "/manifest.json",
-      "destination": "/manifest.json"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/sw.js", "destination": "/sw.js" },
+    { "source": "/manifest.json", "destination": "/manifest.json" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
