feat: Implement PWA features and improve UX
Integrates Progressive Web App (PWA) functionality to enable offline access and "Add to Home Screen" capabilities.

Enhances the user experience by:
- Displaying a more robust install prompt.
- Adding PWA meta tags for better integration on mobile devices.
- Updating the service worker for improved caching.
- Adjusting the sidebar to reflect installation status.
- Optimizing the viewport settings for mobile.

--- a/vercel.json
+++ b/vercel.json
@@ -3,21 +3,8 @@
   "cleanUrls": true,
   "framework": "vite",
   "rewrites": [
-    {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
-    },
-    {
-      "source": "/sw.js",
-      "destination": "/sw.js"
-    },
-    {
-      "source": "/manifest.json",
-      "destination": "/manifest.json"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/sw.js", "destination": "/sw.js" },
+    { "source": "/manifest.json", "destination": "/manifest.json" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
