--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
-
 {
   "name": "Dr. Samy - Assistant Médical IA",
   "short_name": "Dr. Samy",
-  "description": "Votre assistant de santé personnel intelligent",
-  "start_url": ".",
+  "id": "com.drsamy.ai",
+  "description": "Votre assistant de santé personnel intelligent disponible 24/7.",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "orientation": "portrait",
+  "background_color": "#f8fafc",
   "theme_color": "#2563eb",
   "icons": [
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3774/3774293.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3774/3774293.png",
       "sizes": "512x512",
