feat: Update branding and PWA assets
- Refactor color scheme to use a new orange-based brand palette.
- Update PWA theme color and favicon.
- Integrate new logo image for application icon.
- Enhance UI elements with new brand colors for a cohesive look and feel.
- Improve PWA installation prompt logic.

--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,16 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#f8fafc",
-  "theme_color": "#2563eb",
+  "theme_color": "#ff7a21",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3774/3774293.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3774/3774293.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
